--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   "require": {
     "php": ">=5.4.0",
     "ext-mbstring": "*",
-     "toninho09/molecularcore" : "*"
+     "toninho09/molecularcore": "^0.1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0"
